# Random-Forest-C

./: .gitignore  CMakeLists.txt  Makefile  data.py  heart.csv  main.c  random-forest
eval/: eval.c  eval.h
model/: forest.c  tree.c  tree.h
utils/: data.c  log.c  utils.c  utils.h
